# freequant

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2.5pre1  CMakeLists.txt.user.2.6pre1  CMakeLists111.txt  FreeQaunt.pro  FreeQaunt.pro.user.1.3  account.cpp  account.h  currency.cpp  currency.h  exchange.h  freeqaunt.cpp  freequant.pro  freequant.pro.user.2.5pre1  index.html  index.html.1  index.html.2  index.html.3  indicator.cpp  indicator.h  instrument.cpp  instrument.h  market.cpp  order.cpp  order.h  orderbook.cpp  orderbook.h  parameter.cpp  parameter.h  portfolio.h  rule.cpp  rule.h  signal.cpp  signal.h  stock.cpp  stock.h  strategy.cpp  strategy.h  timeseries.cpp  (+3 more)
server/: CMakeLists.txt  FIX44.xml  FixGateway.cpp  PingServer.cpp  config.fix  main.cpp  server.conf
src/: CMakeLists.txt  README.md  account.h  currency.h  datetime.cpp  datetime.h  exchange.cpp  freeqaunt.h  instrument.h  market.h  order.cpp  order.h  orderbook.cpp  orderbook.h  parameter.cpp  parameter.h  portfolio.cpp  portfolio.h  position.cpp  position.h  rule.cpp  rule.h  signal.cpp  signal.h  src.pro  stock.cpp  strategy.h  timeseries.cpp  timeseries.h  transaction.cpp  transaction.h
src/fq/: CMakeLists.txt  bar.h  exception.cpp  exception.h  quote.cpp
src/fq/indicators/: indicator.cpp  indicator.h  ma.cpp  ma.h
src/fq/marketdata/: bar.cpp  bar.h  marketdataprovider.h  provider.cpp  provider.h  quote.cpp  quote.h  twsprovider.cpp  twsprovider.h  yahooprovider.cpp  yahooprovider.h
src/fq/server/: Executor.cpp  OrderBook.cpp  OrderBook.h  executor.cpp  executor.h
src/fq/strategy/: Instrument.cpp  Instrument.h  Order.cpp  Position.h  Task.h  account.cpp  account.h  currency.cpp  currency.h  engine.cpp  engine.h  exchange.cpp  exchange.h  instrument.cpp  instrument.h  order.cpp  order.h  orderbook.cpp  orderbook.h  parameter.cpp  parameter.h  portfolio.cpp  portfolio.h  position.cpp  position.h  rule.cpp  rule.h  stock.cpp  stock.h  strategy.cpp  strategy.h  transaction.cpp  transaction.h
src/fq/trade/: CtpTradeProvider.cpp  CtpTradeProvider.h  FixTradeProvider.h  TradeProvider.h  TwsTradeProvider.cpp  TwsTradeProvider.h  ctpprovider.cpp  ctpprovider.h  ctptradeprovider.cpp  ctptradeprovider.h  fixtradeprovider.cpp  fixtradeprovider.h  provider.h  tradeprovider.h
src/fq/utils/: Timer.cpp  Timer.h  csvparser.cpp  csvparser.h  datetime.cpp  datetime.h  httpclient.cpp  httpclient.h  timer.cpp  timer.h  timeseries.cpp  timeseries.h
src/freequant/: Config.h  Exception.cpp  Exception.h  FreeQuantPlatform.h  MarketDataProviderFactory.cpp  MarketDataProviderFactory.h  Provider.cpp  Provider.h  Version.h  bar.cpp  bar.h  exception.h  quote.h
src/freequant/data/: ATR.hpp  BB.hpp  Dummy.cpp  Indicator.cpp  Indicator.h  MA.cpp  MA.h  MACD.hpp  RSI.h  TR.hpp  TimeSeries.hpp
src/freequant/detail/: Atomic.cpp  Atomic.hpp  Barrier.h  FixProviderImpl.cpp  FixProviderImpl.h  Notifier.h  TwsProviderImpl.h
src/freequant/experiment/: AD.cpp  AD.h  ADX.cpp  ADX.h  ATR.cpp  ATR.h  BB.cpp  BB.h  DX.h  Indicator.cpp  Indicator.h  MA.cpp  MA.h  MACD.cpp  MACD.h  Others.h  RSI.cpp  RSI.h  TR.cpp  TR.h  TimeSeries.cpp  TimeSeries.h
src/freequant/fix/: CtpGateway.cpp  CtpGateway.h  CtpSseGateway.cpp  CtpSseGateway.h  FieldTranslator.h  FixMessageAugmentor.h  FixServer.cpp  FixServer.h  MessageFactory.cpp  MessageFactory.h  SocketAcceptor.cpp  SocketAcceptor.h  SocketConnection.cpp  SocketConnection.h
src/freequant/indicators/: Indicator.cpp  Indicator.h  MA.cpp  MA.h  MA.h.autosave  SMA.h  indicator.cpp  indicator.h  ma.cpp  ma.h
src/freequant/manager/: DataManager.cpp  DataManager.h
src/freequant/marketdata/: Bar.cpp  Bar.h  Bar.h.autosave  BogusMarketDataProvider.cpp  BogusMarketDataProvider.h  CsvMarketDataProvider.cpp  CsvMarketDataProvider.h  CtpMarketDataProvider.cpp  CtpMarketDataProvider.h  CtpMarketDataProvider1.cpp  CtpMarketDataProvider1.h  FixMarketDataProvider.cpp  FixMarketDataProvider.h  FixMarketDataProvider.h.autosave  MarketDataProvider.cpp  MarketDataProvider.h  Quote.cpp  Quote.h  Tick.cpp  Tick.h  TickCompressor.h  Trade.cpp  Trade.h  YahooMarketDataProvider.cpp  YahooMarketDataProvider.h  bar.cpp  bar.h  marketdataprovider.h  quote.h  twsprovider.h  (+3 more)
swig/: CMakeLists.txt  freequant.i
swig/R/: CMakeLists.txt  R.i
swig/csharp/: CMakeLists.txt  csharp.i  freequant.i
swig/ctpraw/: CMakeLists.txt  ctp.i
swig/java/: CMakeLists.txt  CtpMdTester.java  freequant.i  java.i
swig/lua/: CMakeLists.txt  freequant.i
swig/octave/: CMakeLists.txt
swig/perl/: CMakeLists.txt
swig/python/: CMakeLists.txt
swig/ruby/: CMakeLists.txt  extconf.rb  freequant.i
swig/tcl/: CMakeLists.txt
tests/: BoostTestMain.cpp  CMakeLists.txt  testDateTime.cpp  testIndicator.cpp  testIndicators.cpp  testMdGen.cpp  testOrder.cpp  testTickCompressor.cpp  testTimeSeries.cpp  tests.pro
tests/alltests/: alltests.pro
tests/data/: IF1210.txt
tests/test_ctpprovider/: main.cpp  test_ctpprovider.pro
tests/test_ctptradeprovider/: main.cpp  test_ctptradeprovider.pro
tests/test_provider/: CMakeLists.txt  main.cpp  test_provider.pro
tests/test_strategy/: CMakeLists.txt  main.cpp
tests/test_timer/: CMakeLists.txt  main.cpp  test_timer.pro
tests/test_twsprovider/: main.cpp  test_twsprovider.pro
tools/fqclient/: CMakeLists.txt  accoutupdate.ui  accoutupdatedialog.ui  client.cpp  commondialog.cpp  commondialog.h  commondialog.ui  connection.ui  executionreportfilter.ui  executionreportfilterdialog.ui  forms.qrc  fqclient.pro  logconfiguration.ui  logconfigurationdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  marketscanner.ui  marketscannerdialog.ui  newsbulletins.ui  newsbulletinsdialog.ui  order.ui  orderattributes.ui  orderattributesdialog.ui  orderdialog.ui
tools/fqclient2/: CMakeLists.txt  FIX42.xml  PosixTestClient.cpp  commondialog.cpp  commondialog.h  commondialog.ui  config.fix  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tools/tradeclient/: Application.cpp  Application.h  CMakeLists.txt  SimpleClient.cpp  SimpleServer.cpp  TimeClient.cpp  TimeServer.cpp  tradeclient.cpp
(+169 files in other folders)
