add_executable(server main.cpp)
if(WIN32)
    set(WS2_32 ws2_32)
endif()
target_link_libraries(server ${PROJECT_NAME} ${QUICKFIX_LIBRARIES} ${WS2_32})
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.fix ${PROJECT_BINARY_DIR}/bin/config.fix COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/FIX42.xml ${PROJECT_BINARY_DIR}/bin/FIX42.xml COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/FIX43.xml ${PROJECT_BINARY_DIR}/bin/FIX43.xml COPYONLY)
