file(GLOB_RECURSE HEADERS *.h)
file(GLOB_RECURSE SOURCES *.cpp)
file(GLOB_RECURSE TWS_SRC ${PROJECT_SOURCE_DIR}/vendors/tws/*.cpp)

add_library(${PROJECT_NAME} STATIC ${SOURCES} ${TWS_SRC})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${CURL_LIBRARIES} ${QUICKFIX_LIBRARIES} ${CTP_LIBRARIES})
add_definitions(-D_AFXDLL -DIB_USE_STD_STRING)

set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install(DIRECTORY freequant DESTINATION include FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
