file(GLOB_RECURSE HEADERS *.h *.hpp)
file(GLOB_RECURSE SOURCES *.cpp)
file(GLOB_RECURSE TWS_SRC ${PROJECT_SOURCE_DIR}/vendors/tws/*.cpp)

add_library(${PROJECT_NAME} STATIC ${SOURCES} ${TWS_SRC})

target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${CURL_LIBRARIES} ${QUICKFIX_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${CTP_LIBRARIES})
add_definitions(-D_AFXDLL -DIB_USE_STD_STRING -DBOOST_NETWORK_NO_LIB)

set_target_properties(${PROJECT_NAME} PROPERTIES VERSION "1.0" SOVERSION "1")

set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install(DIRECTORY freequant DESTINATION include FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
